kusto-argo/base/ingress-argo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-ingress
  namespace: argocd
  annotations:
    hajimari.io/enable: true
    hajimari.io/group: jeanPi

spec:
  rules:
  - host: argo.dartus.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
